<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Stylish</string>

    <string name="managestyles">Manage styles</string>
    <string name="disableallstyles">Disable all styles</string>
    <string name="findstyles">Find styles for current site</string>
    <string name="about">This Add-on MUST be used with “Dolphin Browser” which is available on Google Play. </string>
    <string name="description">Dont launch this application directly. Open any site in Dolphin Browser, swype right edge to left, tap to "Stylish" icon and then "Find styles for current site". Choose any userstyle, and click to green "Install" button. Return to tab with your site and you will see the changes. This addon has the same functions as the Stylish for Firefox and Chrome on a PC. </string>
    <string name="disable">Disable</string>
    <string name="enable">Enable</string>
    <string name="delete">Delete</string>
    <string name="affects">Affects</string>
    <string name="alltheweb">all the Web</string>
    <string name="enableallstyles">Enable all styles</string>
    <string name="edit">Edit</string>
    <string name="name">Name</string>
    <string name="save">Save</string>
    <string name="update">Update</string>
    <string name="trouble">Trouble with file writing. Try one more time.</string>
    <string name="install">Install with Stylish</string>
    <string name="installing">Installing</string>
    <string name="problemwhiledownloading">Problem while downloading</string>
    <string name="insertsd">Please, insert SD card!</string>
    <string name="createstyle">Create style for</string>
</resources>
