<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="5dp"
    android:id="@+id/linear"
    >

    <Button
        android:id="@+id/btnManage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/managestyles" />

    <ToggleButton
        android:id="@+id/btnDisable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textOn="@string/disableallstyles"
        android:textOff="@string/enableallstyles" />

    <Button
        android:id="@+id/btnFind"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/findstyles" />

    <Button
        android:id="@+id/btnCreate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/createstyle" />

    <ProgressBar
        android:id="@+id/progressBar1"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
